--- a/Sameer-Shende.html
+++ b/Sameer-Shende.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Profile</title>
+</head>
+
+<body>
+    <h1><u>My Profile</u></h1>
+    <h2>About Me</h2>
+    <img src="2023-05-07.png" alt="My picture" width="300">
+    <br><br>
+    <b>Name: Sameer Shende</b>
+    <br>
+    <pre>I am a 18 year old boy currently pursuing Computer Science and Engineerig at IIT Goa.
+I am currenty in 1st year.
+    </pre>
+    <h2>Education</h2>
+    <br>
+    <table border="">
+        <tr>
+            <th>Academic Year</th>
+            <th>Standard</th>
+            <th>School Name</th>
+        </tr>
+        <tr>
+            <td>2019-2020</td>
+            <td>10th</td>
+            <td>Somalwae Nikalas</td>
+        </tr>
+        <tr>
+            <td>2021-2022</td>
+            <td>12th</td>
+            <td>Prerna Convent</td>
+        </tr>
+        <tr>
+            <td>2022-2026</td>
+            <td>B.Tech(Cse)</td>
+            <td>IIT Goa</td>
+        </tr>
+    </table>
+
+    <h2>Course @IITGoa</h2>
+    <br>
+    <h3>Spring Semester</h3>
+    
+
+
+
+
+</body>
+
+</html>
